-- Correcion en entrega de cambio

--- a/PL/Views/Maquina/Carrito.cshtml
+++ b/PL/Views/Maquina/Carrito.cshtml
@@ -221,7 +221,14 @@
           
             var cambio = num.innerText - totalProducto
 
-            swal("Recibe tu cambio", cambio, "succes")
+            if(cambio == 0){
+
+            }else{
+                swal("Recibe tu cambio", cambio, "succes")
+
+
+            }
+
 
         }
 
